# pybind_test

./: .gitignore  CMakeLists.txt  Makefile
pybind_test/: pyproject.toml
pybind_test/src/pybind_test/: __init__.py
pybind_test/src/pybind_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: main.py
src/: main.cpp
src/ffi/: example.cpp  testing.cpp
